--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
+    "pdf-poppler": "^0.2.1",
+    "pdf2image": "^1.2.3",
+    "pdf2pic": "^3.1.4",
     "pg": "^8.14.0"
   }
 }
