--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
-    "pdf-poppler": "^0.2.1",
-    "pdf2image": "^1.2.3",
-    "pdf2pic": "^3.1.4",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.14.0"
   }
 }
