--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
+    "@huggingface/inference": "^3.5.2",
     "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "node-sass": "^9.0.0",
+    "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
     "pg": "^8.14.0"
   },
