--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@google/generative-ai": "^0.24.0",
     "@huggingface/inference": "^3.5.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -23,7 +25,8 @@
     "node-sass": "^9.0.0",
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
-    "pg": "^8.14.0"
+    "pg": "^8.14.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
