--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@google/generative-ai": "^0.24.0",
     "@huggingface/inference": "^3.5.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "axios": "^1.8.4",
     "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
