--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
+    "d3": "^7.9.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "pdf-lib": "^1.17.1",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20.17.28",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19",
