--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "next": "15.2.2",
     "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
