--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "marked": "^15.0.8",
     "multer": "^1.4.5-lts.1",
     "node-sass": "^9.0.0",
     "path": "^0.12.7",
