--- a/backend/package.json
+++ b/backend/package.json
@@ -30,8 +30,11 @@
     "pdf-lib": "^1.17.1",
     "pdf-poppler": "^0.2.1",
     "pdf2pic": "^3.1.4",
-    "pg": "^8.14.0",
+    "pg": "^8.14.1",
+    "pg-hstore": "^2.3.4",
     "puppeteer": "^24.4.0",
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.2",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
